--- a/database/main.css
+++ b/database/main.css
@@ -134,6 +134,9 @@ footer {
 .supplementary > * {
   min-width: 220px;
 }
+.supplementary > #status.inactive {
+  min-width: 0;
+}
 @media (max-width: 600px) {
   .supplementary {
     transition: all 0.5s;
@@ -189,4 +192,19 @@ footer {
   margin: 0;
   text-align: center;
   font-weight: bolder;
+}
+#loader {
+  text-transform: uppercase;
+  font-size: 3em;
+  display: block;
+  color: #666;
+  text-shadow: 1px 1px 3px #fff;
+  position: fixed;
+  top: 2em;
+  z-index: 1000;
+  width: 800px;
+  text-align: center;
+}
+#loader.inactive {
+  display: none;
 }
