--- a/main.less
+++ b/main.less
@@ -98,6 +98,7 @@ h1 {
     input {
         min-width: 33vw;
         padding-left: @spacer;
+        margin: @spacer*2 0;
     }
     label {
         font-size: 1.2em;
