--- a/main.less
+++ b/main.less
@@ -104,6 +104,13 @@ h1 {
         font-size: 1.2em;
     }
 }
+#status {
+    width: 100%;
+    background: rgba(0,0,0,0.04);
+    padding: @spacer/4 @spacer;
+    font-size: 0.8em;
+    text-align: center;
+}
 footer {
     padding: @spacer 2em;
     transition: all 0.5s;
