remove old markers that aren't visible in the screen

--- a/main.less
+++ b/main.less
@@ -244,6 +244,7 @@ footer {
     &.inactive {
         transition: all 1s;
         opacity: 0;
+        z-index: -10;
     }
     color: #666;
     text-shadow: 1px 1px 3px #fff;
